--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,26 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+              <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.25</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+  	</dependency>
+  	
+  	<dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+    </dependency>
+    
   </dependencies>
 
   <build>
