--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,13 @@
   	<servlet-class>com.cognixia.jump.web.LogoutServlet</servlet-class>
   </servlet>
   
+  	<servlet>
+		<servlet-name>AccountServlet</servlet-name>
+		<display-name>AccountServlet</display-name>
+		<description></description>
+		<servlet-class>com.cognixia.jump.web.AccountServlet</servlet-class>
+	</servlet>
+  
   <servlet-mapping>
   	<servlet-name>LoginServlet</servlet-name>
   	<url-pattern>/LoginServlet</url-pattern>
@@ -39,5 +46,10 @@
   	<servlet-name>LogoutServlet</servlet-name>
   	<url-pattern>/logout</url-pattern>
   </servlet-mapping>
+  
+  	<servlet-mapping>
+		<servlet-name>AccountServlet</servlet-name>
+		<url-pattern>/AccountServlet</url-pattern>
+	</servlet-mapping>
   
 </web-app>
